<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded"
        android:orientation="vertical">
    >

        <EditText
            android:id="@+id/ETCadLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintCadastrarLogin"
            android:minHeight="48dp"></EditText>

        <EditText
            android:inputType="text"
            android:id="@+id/ETCadSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintCadastrarSenha"
            android:minHeight="48dp"></EditText>
        <Button
            android:id="@+id/btCadLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botaoPadrao"
            android:text="@string/buttonCadastrarLogin"
            android:textColor="#C5CAE9"/>
        <Button
            android:id="@+id/btCadCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botaoPadrao"
            android:text="@string/buttonCancelar"
            android:textColor="#C5CAE9"/>
    </LinearLayout>

</LinearLayout>