<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teste">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintTotalDeViajantes"
                android:inputType="number"
                android:minHeight="48dp"
                android:autofillHints=""/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintDuracaoViagem"
                android:inputType="number"
                android:minHeight="48dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/TextGasolina"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotalEstimadoGas"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextMediaQuilometragem"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextCustoMedioPorLitro"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotalVeiculos"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:text="@string/TextValor"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextAdicionarViagem"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/Background"
                        android:textColor="@color/CorPrimaria"
                        android:text="@string/TextSim"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/TextTarifaAerea" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/CustoEstimadoPessoa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextAluguelVeiculo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/TextValor"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/TextAdicionarViagem" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/Background"
                    android:textColor="@color/CorPrimaria"
                    android:text="@string/TextSim"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/TextRefeicao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextCustoEstimadorefeicao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextRefeicaoPorDia"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextValor"
                    android:textSize="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/TextAdicionarViagem" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/Background"
                    android:textColor="@color/CorPrimaria"
                    android:text="@string/TextSim"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/TextHospedagem" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextCustoMedioPorNoite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotalNoites"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotalQuartos"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:gravity="bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/TextTotal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/TextValor"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="47dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/TextAdicionarViagem" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/Background"
                    android:textColor="@color/CorPrimaria"
                    android:text="@string/TextSim"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>