<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AzulPadrao"
    tools:context=".PlanejarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDescricao"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/ETDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintDescricao"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/btSalvarDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botaoPadrao"
            android:text="@string/buttonSalvar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>